<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/name_txt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/mail_txt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mail_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:padding="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/phone_txt"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="12sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phone_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/ok"
        android:drawableEnd="@drawable/ic_launcher"
        android:drawableRight="@drawable/ic_launcher" />

</LinearLayout>